--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -27,7 +27,7 @@ spec:
               if [ -d "${WORKSPACE_SOURCE_PATH}" ] ; then
                 # Delete non-hidden files and directories
                 rm -rf "${WORKSPACE_SOURCE_PATH:?}"/*
-                # Delete files and directories starting with . but excluding ..
+                # Delete files and directories starting with . but excluding .
                 rm -rf "${WORKSPACE_SOURCE_PATH}"/.[!.]*
                 # Delete files and directories starting with .. plus any other character
                 rm -rf "${WORKSPACE_SOURCE_PATH}"/..?*
